--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
          <header class="row">
             <nav class="navbar navbar-expand-md bg-dark navbar-dark col">
-               <a class="navbar-brand" href="/index.html">
-                  <img src="/img/logo.png" alt="logo orinoco e-commerce boutique achat en ligne">
+               <a class="navbar-brand" href="./index.html">
+                  <img src="./img/logo.png" alt="logo orinoco e-commerce boutique achat en ligne">
                </a>
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
                   <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
                <div id="navbarContent" class="collapse navbar-collapse">
                   <ul class="navbar-nav">
                      <li class="nav-item active">
-                        <a class="nav-link" href="/index.html">Accueil</a>
+                        <a class="nav-link" href="./index.html">Accueil</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="#">Produits</a>
@@ -49,16 +49,16 @@
          <main class="row">
             <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
                <div class="card">
-                  <img class="card-img-top" src="/img/oak_1.jpg" alt="meuble bois chêne">
+                  <img class="card-img-top" src="./img/oak_1.jpg" alt="meuble bois chêne">
                   <div class="card-body">
                      <h5 class="card-title">Produit n°1</h5>
-                     <a href="/produit_1.html" class="btn btn-warning stretched-link">Détails</a>
+                     <a href="./produit_1.html" class="btn btn-warning stretched-link">Détails</a>
                   </div>
                </div>
             </div>
             <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
                <div class="card">
-                  <img class="card-img-top" src="/img/oak_2.jpg" alt="meuble bois chêne">
+                  <img class="card-img-top" src="./img/oak_2.jpg" alt="meuble bois chêne">
                   <div class="card-body">
                      <h5 class="card-title">Produit n°2</h5>
                      <a href="#" class="btn btn-warning stretched-link">Détails</a>
@@ -67,7 +67,7 @@
             </div>
             <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
                <div class="card">
-                  <img class="card-img-top" src="/img/oak_3.jpg" alt="meuble bois chêne">
+                  <img class="card-img-top" src="./img/oak_3.jpg" alt="meuble bois chêne">
                   <div class="card-body">
                      <h5 class="card-title">Produit n°3</h5>
                      <a href="#" class="btn btn-warning stretched-link">Détails</a>
@@ -76,7 +76,7 @@
             </div>
             <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
                <div class="card">
-                  <img class="card-img-top" src="/img/oak_4.jpg" alt="meuble bois chêne">
+                  <img class="card-img-top" src="./img/oak_4.jpg" alt="meuble bois chêne">
                   <div class="card-body">
                      <h5 class="card-title">Produit n°4</h5>
                      <a href="#" class="btn btn-warning stretched-link">Détails</a>
@@ -85,7 +85,7 @@
             </div>
             <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
                <div class="card">
-                  <img class="card-img-top" src="/img/oak_5.jpg" alt="meuble bois chêne">
+                  <img class="card-img-top" src="./img/oak_5.jpg" alt="meuble bois chêne">
                   <div class="card-body">
                      <h5 class="card-title">Produit n°5</h5>
                      <a href="#" class="btn btn-warning stretched-link">Détails</a>
